Scrum cards are added to the document.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <title>Scrum Poker</title>
   <meta name="viewport" content="width=device-width">
   <link href="style/style.css" type="text/css" rel="stylesheet">
+  <script src="scripts/poker.js"></script>
+  <script src="scripts/install.js"></script>
 </head>
 <body>
-
-<h1>Scrum Poker cards</h1>
-
+  <section id="cardsContainer">
+  </section>
 </body>
-
-<script src="scripts/poker.js"></script>
-<script src="scripts/install.js"></script>
-
 </html>
