Markup is now largely static, using CSS table layout.
- Instead of generating HTML, it is now static: better responsiveness and separation of concerns
- Using CSS table layout to lay out cards
- Simplifies the JavaScript part since it now deals much more with behavior and less with rendering

--- a/index.html
+++ b/index.html
@@ -10,6 +10,88 @@
 </head>
 <body>
   <section id="cardsContainer">
+    <div class="card-row">
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">?</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">0</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">1/2</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">1</span>
+        </span>
+      </div>
+    </div>
+    <div class="card-row">
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">2</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">3</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">5</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">8</span>
+        </span>
+      </div>
+    </div>
+    <div class="card-row">
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">13</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">20</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">40</span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">100</span>
+        </span>
+      </div>
+    </div>
+    <div class="card-row">
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">
+            <img src="images/infinity.svg"></img>
+          </span>
+        </span>
+      </div>
+      <div class="card-cell">
+        <span class="card">
+          <span class="card-label">
+            <img src="images/coffee_cup.svg"></img>
+          </span>
+        </span>
+      </div>
+    </div>
   </section>
 </body>
 </html>
