Infinity and coffee cup are displayed centered in cards.

--- a/index.html
+++ b/index.html
@@ -79,16 +79,12 @@
     <div class="card-row">
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">
-            <img src="images/infinity.svg"></img>
-          </span>
+          <span class="card-label infinity"></span>
         </span>
       </div>
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">
-            <img src="images/coffee_cup.svg"></img>
-          </span>
+          <span class="card-label coffee"></span>
         </span>
       </div>
     </div>
