Font size is styled depending on the viewport size and device orientation.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">1/2</span>
+          <span class="card-label large-label">1/2</span>
         </span>
       </div>
       <div class="card-cell">
@@ -57,22 +57,22 @@
     <div class="card-row">
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">13</span>
+          <span class="card-label medium-label">13</span>
         </span>
       </div>
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">20</span>
+          <span class="card-label medium-label">20</span>
         </span>
       </div>
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">40</span>
+          <span class="card-label medium-label">40</span>
         </span>
       </div>
       <div class="card-cell">
         <span class="card">
-          <span class="card-label">100</span>
+          <span class="card-label large-label">100</span>
         </span>
       </div>
     </div>
