Tabbar with settings and about menu items is shown at the bottom.
The menu items are not yet implemented, tabbar is always shown by default.

--- a/index.html
+++ b/index.html
@@ -89,5 +89,15 @@
       </div>
     </div>
   </section>
+  <section id="settingsBar" role="region">
+    <ul role="menu">
+      <li id="aboutMenuItem" role="menuitem">
+        <div class="menu-button"></div>
+      </li>
+      <li id="themesMenuItem" role="menuitem">
+        <div class="menu-button"></div>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
