Layout, styles and animation for bottom tabbar in both minimize and maximized states.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       </div>
     </div>
   </section>
+  <section id="minimizedSettingsBar" class="shown">
+    <div id="maximizeMenuButton">
+      <div></div>
+    </div>
+  </section>
   <section id="settingsBar" role="region">
     <ul role="menu">
       <li id="aboutMenuItem" role="menuitem">
