--- a/index.html
+++ b/index.html
@@ -104,5 +104,14 @@
       </li>
     </ul>
   </section>
+  <section id="aboutDialog" role="dialog" data-type="confirm">
+    <section>
+      <h1>About</h1>
+      <p>Some information about the app</p>
+    </section>
+    <menu>
+      <button>OK</button>
+    </menu>
+  </section>
 </body>
 </html>
