Some initial styling for dialogs and buttons.

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
       </li>
     </ul>
   </section>
-  <section id="aboutDialog" role="dialog" data-type="confirm">
+  <section id="aboutDialog" class="dialog" role="dialog" data-type="confirm">
     <section>
       <h1>About</h1>
       <p>Some information about the app</p>
     </section>
-    <menu>
-      <button>OK</button>
-    </menu>
+    <div class="footer">
+      <div class="button">OK</div>
+    </div>
   </section>
 </body>
 </html>
