Implemented the "About" screen.

--- a/index.html
+++ b/index.html
@@ -104,14 +104,52 @@
       </li>
     </ul>
   </section>
-  <section id="aboutDialog" class="dialog" role="dialog" data-type="confirm">
-    <section>
-      <h1>About</h1>
-      <p>Some information about the app</p>
+  <section id="aboutDialog" class="dialog confirm" role="dialog" data-type="confirm">
+    <section class="header">
+      <h1>Scrum Poker</h1>
+      <p>version 1.0.0</p>
     </section>
-    <div class="footer">
-      <div class="button">OK</div>
-    </div>
+    <section class="content">
+      <p>
+        by Anton Ivanov
+      </p>
+      <a href="mailto:anton.al.ivanov@gmail.com" target="_blank">anton.al.ivanov@gmail.com</a>
+      <p>
+        Report an issue
+      </p>
+      <a href="https://github.com/antivanov/scrum-poker/issues" target="_blank">https://github.com/antivanov/scrum-poker/issues</a>
+      <p>
+        Source code
+      </p>
+      <a href="https://github.com/antivanov/scrum-poker" target="_blank">https://github.com/antivanov/scrum-poker</a>
+      <p>coffee cup icon by CrazyTerabyte 2011, infinity icon by GR8DAN 2013, cog icon based on Google Web Fundamentals</p>
+      <p class="license">
+The MIT License (MIT)
+
+Copyright (c) 2015 Anton Ivanov
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+      </p>
+    </section>
+    <section class="footer">
+      <div class="ok-button button">OK</div>
+    </section>
   </section>
 </body>
 </html>
