Empty theme selection dialog.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,23 @@
       <li id="aboutMenuItem" role="menuitem">
         <div class="menu-button"></div>
       </li>
-      <li id="themesMenuItem" role="menuitem">
+      <li id="settingsMenuItem" role="menuitem">
         <div class="menu-button"></div>
       </li>
     </ul>
+  </section>
+  <section id="settingsDialog" class="dialog choice" role="dialog" data-type="confirm">
+    <section class="header">
+      <h2>Choose theme</h2>
+    </section>
+    <section class="content">
+      <p>
+        Here goes the list of themes
+      </p>
+    </section>
+    <section class="footer">
+      <div class="cancel-button button">Cancel</div><div class="ok-button button">OK</div>
+    </section>
   </section>
   <section id="aboutDialog" class="dialog confirm" role="dialog" data-type="confirm">
     <section class="header">
