Basic layout for the theme selection dialog.

--- a/index.html
+++ b/index.html
@@ -109,9 +109,14 @@
       <h2>Choose theme</h2>
     </section>
     <section class="content">
-      <p>
-        Here goes the list of themes
-      </p>
+      <ul>
+        <li name="orange">orange</li>
+        <li name="lightOrange">light orange</li>
+        <li name="blue">blue</li>
+        <li name="lightBlue">light blue</li>
+        <li name="brown">brown</li>
+        <li name="charcoal">charcoal</li>
+      </ul>
     </section>
     <section class="footer">
       <div class="cancel-button button">Cancel</div><div class="ok-button button">OK</div>
