--- a/index.html
+++ b/index.html
@@ -110,12 +110,30 @@
     </section>
     <section class="content">
       <ul>
-        <li name="orange">orange</li>
-        <li name="lightOrange">light orange</li>
-        <li name="blue">blue</li>
-        <li name="lightBlue">light blue</li>
-        <li name="brown">brown</li>
-        <li name="charcoal">charcoal</li>
+        <li class="orange-theme">
+          <span class="theme-sample"></span>
+          <span class="label">orange</span>
+        </li>
+        <li class="light-orange-theme">
+          <span class="theme-sample"></span>
+          <span class="label">light orange</span>
+        </li>
+        <li class="blue-theme">
+          <span class="theme-sample"></span>
+          <span class="label">blue</span>
+        </li>
+        <li class="light-blue-theme">
+          <span class="theme-sample"></span>
+          <span class="label">light blue</span>
+        </li>
+        <li class="brown-theme">
+          <span class="theme-sample"></span>
+          <span class="label">brown</span>
+        </li>
+        <li class="charcoal-theme">
+          <span class="theme-sample"></span>
+          <span class="label">charcoal</span>
+        </li>
       </ul>
     </section>
     <section class="footer">
