Theme can be selected in the dialog, but the selection is not yet reflected in the app.

--- a/index.html
+++ b/index.html
@@ -110,27 +110,27 @@
     </section>
     <section class="content">
       <ul>
-        <li class="orange-theme">
+        <li theme="orange">
           <span class="theme-sample"></span>
           <span class="label">orange</span>
         </li>
-        <li class="light-orange-theme">
+        <li theme="lightOrange">
           <span class="theme-sample"></span>
           <span class="label">light orange</span>
         </li>
-        <li class="blue-theme">
+        <li theme="blue">
           <span class="theme-sample"></span>
           <span class="label">blue</span>
         </li>
-        <li class="light-blue-theme">
+        <li theme="lightBlue">
           <span class="theme-sample"></span>
           <span class="label">light blue</span>
         </li>
-        <li class="brown-theme">
+        <li theme="brown">
           <span class="theme-sample"></span>
           <span class="label">brown</span>
         </li>
-        <li class="charcoal-theme">
+        <li theme="charcoal">
           <span class="theme-sample"></span>
           <span class="label">charcoal</span>
         </li>
