New themes, adding one light theme.

--- a/index.html
+++ b/index.html
@@ -110,29 +110,33 @@
     </section>
     <section class="content">
       <ul>
+        <li theme="red">
+          <span class="theme-sample"></span>
+          <span class="label">red</span>
+        </li>
         <li theme="orange">
           <span class="theme-sample"></span>
           <span class="label">orange</span>
         </li>
-        <li theme="lightOrange">
+        <li theme="green">
           <span class="theme-sample"></span>
-          <span class="label">light orange</span>
+          <span class="label">green</span>
+        </li>
+        <li theme="yellow">
+          <span class="theme-sample"></span>
+          <span class="label">yellow</span>
         </li>
         <li theme="blue">
           <span class="theme-sample"></span>
           <span class="label">blue</span>
         </li>
-        <li theme="lightBlue">
-          <span class="theme-sample"></span>
-          <span class="label">light blue</span>
-        </li>
-        <li theme="brown">
-          <span class="theme-sample"></span>
-          <span class="label">brown</span>
-        </li>
         <li theme="charcoal">
           <span class="theme-sample"></span>
           <span class="label">charcoal</span>
+        </li>
+        <li theme="white">
+          <span class="theme-sample"></span>
+          <span class="label">white</span>
         </li>
       </ul>
     </section>
